--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,8 @@ license = "MIT"
 
 [dependencies]
 handlebars = "3.1.0"
+serde_yaml = "0.8.13"
 
+[dependencies.serde]
+version = "1.0.112"
+features = ["derive"]
