--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,9 @@ license = "MIT"
 
 [dependencies]
 handlebars = "3.1.0"
-serde_yaml = "0.8.13"
+serde_yaml = "0.8.14"
+clap = "3.0.0-beta.2"
 
 [dependencies.serde]
-version = "1.0.112"
+version = "1.0.117"
 features = ["derive"]
