--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,10 @@ readme = "README.md"
 license = "MIT"
 
 [dependencies]
-handlebars = "3.1.0"
+handlebars = "3.5.1"
 serde_yaml = "0.8.14"
 clap = "3.0.0-beta.2"
+convert_case = "0.4.0"
 
 [dependencies.serde]
 version = "1.0.117"
