--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ handlebars = "3.5.3"
 serde_yaml = "0.8.17"
 serde = { version = "1.0.123", features = ["derive"] }
 convert_case = "0.4.0"
+regex = "1.4.3"
