--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ license = "MIT"
 
 [dependencies]
 handlebars = "3.5.3"
+chrono = "0.4.*"
 serde_yaml = "0.8.17"
 serde = { version = "1.0.123", features = ["derive"] }
 convert_case = "0.4.0"
